--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <a href="login1.html?destino=perdidoemmarte.html"><img src="perdidoemmarte.jpeg" alt="Perdido em Marte" /></a>
         <a href="login1.html?destino=sniperamericano.html"><img src="sniperamericano.jpeg" alt="Sniper Americano" /></a>
         <a href="login1.html?destino=milagrenacela7.html"><img src="milagrenacela7.jpeg" alt="Milagre na Cela 7" /></a>
-        <a href="login1.html?destino=resgate2.html"><img src="resgate2.JPEG" alt="Resgate 2" /></a>
+        <a href="login1.html?destino=resgate2.html"><img src="resgate2.jpeg" alt="Resgate 2" /></a>
       </div>
     </section>
 
