Atualizar o interestelar1.html

--- a/interestelar1.html
+++ b/interestelar1.html
@@ -42,7 +42,7 @@
 
     <!-- Informações sobre o filme Interestelar -->
     <article class="detalhes-filme">
-      <h2>Interestelar: Ultimato</h2> <!-- Título do filme -->
+      <h2>Interestelar</h2> <!-- Título do filme -->
       <p><strong>2014 • 2h 49m • HD</strong></p> <!-- Informações sobre o ano, duração e qualidade -->
       <p><span class="classificacao" aria-label="Classificação indicativa: 10 anos">10</span> Drama, Aventura e Ficção científica</p> <!-- Gênero e classificação -->
       <p>Em um futuro sombrio, uma equipe de astronautas viaja por um buraco de minhoca em busca de um novo lar para a humanidade.</p> <!-- Sinopse -->
